# TUM-Panda-HOI-assistive-Robot

./: readme.md
camera/: CMakeLists.txt  package.xml
camera/src/: realsense_tf_broadcaster.py
common/: package.xml
common/launch/: camera_pose.launch
configurations/: package.xml
configurations/config/: camera_calibration.rviz  default.rviz  object_labeling.rviz
doc/: grasp.cpp
doc/motion_control/: CMakeLists.txt  package.xml
doc/motion_control/launch/: robot_motion.launch
doc/motion_control/src/: archive.cpp  example.cpp  robot.cpp
doc/motion_control/src/application/: motion_control.cpp
doc/vision/camera_tf/: Settings.md
doc/vision/object_labeling/include/object_labeling/: object_labeling.h
doc/vision/object_labeling/src/: object_labeling.cpp
doc/vision/object_labeling/src/applications/: object_labeling_node.cpp
gazebo_sim/: CMakeLists.txt  package.xml
gazebo_sim/config/: sim_config.rviz  std_config_cam.rviz
gazebo_sim/launch/: edit_world.launch  sim_cam.launch  simulation.launch
gazebo_sim/models/Table/: tabel.sdf
gazebo_sim/worlds/: empty.world  sim.world  simple_world.world
motion/doc/: .~lock.selected_object.docx#  TODO_list.md  selected_object.docx
motion/grasp_pose_filter/: CMakeLists.txt  package.xml
motion/grasp_pose_filter/launch/: grasp_pose_filter.launch
motion/grasp_pose_filter/script/: grasp_pose_filter.py
motion/motion_common/: CMakeLists.txt  package.xml
motion/motion_common/config/: path_setting.yaml
motion/motion_common/launch/: pick_place.launch
motion/npy_generator/: package.xml
motion/npy_generator/launch/: npy_generator.launch
motion/pick_place/: package.xml
motion/pick_place/include/pick_place/: pick.h
motion/pick_place/rviz/: motion_images.rviz
motion/pick_place/src/: pick.cpp  place.cpp
motion/pick_place/src/applications/: pick_node.cpp  place_node.cpp
motion_control/: CMakeLists.txt  package.xml
motion_control/arm_motion/: CMakeLists.txt  package.xml
motion_control/arm_motion/include/arm_motion/: arm_motion.h  common.h  grasp.h  place.h
motion_control/arm_motion/launch/: arm_motion.launch  grasp.launch
motion_control/arm_motion/src/: arm_motion.cpp  common.cpp  grasp.cpp  place.cpp
motion_control/arm_motion/src/application/: arm_motion_node.cpp
motion_control/arm_motion/src/applications/: grasp_node.cpp  place_node.cpp
motion_control/gripper_motion/: CMakeLists.txt  package.xml
motion_control/gripper_motion/include/gripper_motion/: gripper_motion.h
motion_control/gripper_motion/src/: gripper_motion.cpp
motion_control/gripper_motion/src/application/: gripper_motion_node.cpp
motion_control/include/motion_control/: robot.h  scene.h
motion_control/launch/: robot_motion.launch
motion_control/src/: robot.cpp  scene.cpp
motion_control/src/application/: motion_control.cpp
panda_moveit_config/config/: sensors_kinect_depthmap.yaml  sensors_kinect_pointcloud.yaml
panda_moveit_config/launch/: demo.launch  demo_gazebo.launch  moveit.rviz
pick_place/: CMakeLists.txt  package.xml
pick_place/include/pick_place/: place.h
pick_place/launch/: pick_place.launch
pick_place/src/: pick.cpp  place.cpp
plane_segmentation/src/: plane_segmentation.cpp
vision/camera_tf/: CMakeLists.txt  package.xml
vision/camera_tf/launch/: camera_pose.launch
vision/common/: package.xml
vision/common/launch/: grasp_base_pose.launch  grasp_cam_pose.launch
vision/common/rviz/: test.rviz
vision/depth_image_converter/: CMakeLists.txt  package.xml
vision/depth_image_converter/include/depth_image_converter/: depth_image_converter.h
vision/depth_image_converter/launch/: depth_image_converter.launch
vision/depth_image_converter/src/: depth_image_converter.cpp
vision/depth_image_converter/src/application/: depth_image_converter_node.cpp
vision/doc/: test_record.md
vision/doc/camera_calibration/: Settings.md
vision/doc/npy_data_archive/issue/: predictions_bottle.npz
vision/doc/npy_data_archive/succeed/: predictions_bottle.npz
vision/doc/python_notebook/:  debug.ipynb  play_ground.ipynb
vision/grasp_pose_filter/: CMakeLists.txt  package.xml
vision/grasp_pose_filter/launch/: grasp_pose_filter.launch
vision/grasp_pose_filter/script/: grasp_pose_filter.py
vision/hoi_msgs/: CMakeLists.txt  package.xml
vision/hoi_msgs/msg/: EigenTransfMatrix.msg  ImageBoxes.msg
vision/npy_generator/: CMakeLists.txt  package.xml
vision/npy_generator/launch/: npy_generator.launch
vision/npy_generator/script/: npy_generator.py
vision/object_depth_generation/: CMakeLists.txt  package.xml
vision/object_depth_generation/include/object_depth_generation/: object_depth_generation.h
vision/object_depth_generation/launch/: object_depth_generation.launch
vision/object_depth_generation/src/: object_depth_generation.cpp
vision/object_depth_generation/src/application/: object_depth_generation_node.cpp
vision/object_detection/: package.xml
vision/object_detection/launch/: camera_pose.launch  object_detection.launch  test_camera_link_pose.launch
vision/object_labeling/: CMakeLists.txt  package.xml
vision/object_labeling/include/object_labeling/: object_labeling.h
vision/object_labeling/src/: object_labeling.cpp
vision/object_labeling/src/applications/: object_labeling_node.cpp
vision/plane_segmentation/: CMakeLists.txt  package.xml
vision/plane_segmentation/archive/: boxFilter.cpp  generateDepthImage.cpp
vision/plane_segmentation/include/plane_segmentation/: plane_segmentation.h
vision/plane_segmentation/launch/: plane_segmentation.launch  plane_segmentation_tiago.launch
vision/plane_segmentation/src/: plane_segmentation.cpp
vision/plane_segmentation/src/applications/: plane_segmentation_node.cpp
vision/rgb_2_objectcloud/: CMakeLists.txt  package.xml
vision/vision_common/: CMakeLists.txt  package.xml
vision/vision_common/config/: path_setting.yaml  settings.yaml
vision/vision_common/launch/: cloud2image.launch  cloud2npy.launch  grasp_base_pose.launch  grasp_cam_pose.launch  image2npy.launch
