<?xml version="1.0"?>
<package>
  <name>gripper_motion</name>
  <version>0.0.0</version>
  <description>The gripper_motion package</description>

  <maintainer email="yueyangzhang@todo.todo">yueyangzhang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>franka_gripper</build_depend>

  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>franka_description</run_depend>
  <run_depend>pluginlib</run_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>franka_gripper</run_depend>

  <test_depend>rosunit</test_depend>

  <export>
  </export>
</package>
